--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [14, 16]
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -33,22 +31,65 @@ jobs:
         env:
           CI: true
 
+  lint:
+    runs-on: ubuntu-latest
+    needs: build
+    strategy:
+      matrix:
+        node-version: [14, 16]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Lint
         run: npm run lint
         env:
           CI: true
+
+  test_unit:
+    runs-on: ubuntu-latest
+    needs: build
+    strategy:
+      matrix:
+        node-version: [14, 16]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies
+        run: npm install
 
       - name: Unit Tests
         run: npm run test:unit
         env:
           CI: true
 
-      - name: Integration Tests
-        run: npm run test:integration
-        env:
-          CI: true
+  test_integration:
+    runs-on: ubuntu-latest
+    needs: build
+    strategy:
+      matrix:
+        node-version: [14, 16]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: End-to-End Tests
-        run: npm run test:e2e
-        env:
-          CI: true
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install depen
