--- a/package.json
+++ b/package.json
@@ -14,12 +14,22 @@
   "author": "Tiago Brito",
   "license": "ISC",
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "autoprefixer": "^10.4.19",
     "eslint": "^7.32.0",
-    "jest": "^27.0.6"
+    "html-webpack-plugin": "^5.6.0",
+    "jest": "^27.0.6",
+    "postcss": "^8.4.39",
+    "source-map-loader": "^5.0.0",
+    "tailwindcss": "^3.4.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
