--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-webpack-plugin": "^5.6.0",
     "jest": "^27.0.6",
     "postcss": "^8.4.39",
+    "postcss-cli": "^11.0.0",
     "source-map-loader": "^5.0.0",
     "tailwindcss": "^3.4.4"
   },
