--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Official website for Brito Consulting Inc. offering software, website, and mobile app development services.",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "lint": "eslint .",
     "test:unit": "jest --config jest.unit.config.js",
     "test:integration": "jest --config jest.integration.config.js",
-    "test:e2e": "jest --config jest.e2e.config.js"
+    "test:e2e": "jest --config jest.e2e.config.js",
+    "build:css": "npx postcss src/styles/tailwind.css -o src/styles/output.css",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "author": "Tiago Brito",
   "license": "ISC",
@@ -20,6 +23,7 @@
     "html-webpack-plugin": "^5.6.0",
     "jest": "^27.0.6",
     "postcss": "^8.4.39",
+    "postcss-cli": "^11.0.0",
     "source-map-loader": "^5.0.0",
     "tailwindcss": "^3.4.4"
   },
